# codex-inspector

./: .gitignore  README.md  pyproject.toml
codex_inspector/: __init__.py  analyzer.py  cli.py  correlation.py  dashboard.py  fixtures.py  git_utils.py  importer.py  lifecycle.py  normalizer.py  observe_cycle.py  observer.py  redaction.py  runner.py  schemas.py  selftest.py  storage.py  tailer.py
codex_inspector/sample_fixtures/: clean_success.jsonl  dangerous_suspicious.jsonl  repeated_failures.jsonl  risky_dependency_deploy.jsonl
tests/: test_analyzer_and_storage.py  test_cli_observation.py  test_core.py  test_discover_lifecycle.py  test_fixture_regression.py  test_observation_storage.py  test_observer.py  test_passive_reporting.py  test_tailer.py
